--- a/index.html
+++ b/index.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Аниме Приколы</title>
+<title>GoIteens Frontend</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device=width, initlal-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="le=edge">
 </head>
 <body>
-    <a href="https://steamcommunity.com/profiles/76561198438063351/">Ссылка в стим</a>
-    <a href="https://www.youtube.com/watch?v=_YwQtkuKHJo&t=297s">Видео Аниме Приколы</a>
-    <h1>Аниме Приколы</h1>
-    <h3>Название Аниме:</h3>
-    <p>1.Необъятный океан</p>
-    <img  src="https://cdn.discordapp.com/attachments/489055859725565983/636476844593643520/Screenshot_20191023-104342.png" alt="Необъятный Океан">
-    <p>2.Хвост фей</p>
-    <img  src="https://i.pinimg.com/originals/eb/6e/49/eb6e4952445d663895ff5e3cb25dfd98.jpg" alt="Хвост Фей">
-    <p>3.Вельзевул</p>
-    <img  src="http://s002.radikal.ru/i198/1202/34/a4dc6f500331.jpg" alt="Вельзевул">
+   
+    <header>Это шапка
+         <nav>Это навигация</nav>
+        </header>
+   
+    <main>
+     <h1>H1</h1>
+    <p>Параграв </p>
+    <a href="https://github.com/AlexsanderMr/MrDemon228/settings">Ссылка</a>
+    <img src="https://avatars0.githubusercontent.com/u/56883568?s=400&u=961e7851536cbaa4bc07db0714d66a178b83a404&v=4" alt="фото">
+     <img src="./images/men.jpg" width="400px" alt="">
+     <img src="../img/wolk.jpg" width="400px" alt="">
+    <h2>Мои любимые предметы в школе</h2>
+    <ul>
+        <li>Информатика</li>
+        <li>Физра</li>
+        <li>История Украины</li>
+        <li>Всемирная История</li>
+   </ul>
+        <h2>4 вещи которые я люблю</h2>
+        <ol>
+            <li>Гулть</li>
+            <li>Играть в видео игры</li>
+            <li>Говорить с друзьями</li>
+            <li>Играть в баскетбол</li>
+        </ol>
+    <button>Стоп</button>   
+    <button>Продолжить</button>   
+    <button>Пуск</button>
+    <article>
+    <h1>Это заголовок статьи</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Jordan_by_Lipofsky_16577.jpg/274px-Jordan_by_Lipofsky_16577.jpg" alt="lol">
+    <section>
+          <p>BAN</p>
+    </section>
+    <section>
+          <p>BAN</p> 
+    </section>
+    <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B0%D1%81%D0%BA%D0%B5%D1%82%D0%B1%D0%BE%D0%BB">Ссылка на ресурс</a>
+    
+    </article>
+    </main>
+    <footer>Это подвал</footer>
+    <div><h2>Div 1</h2>
+    <div><h2>Div 2</h2></div>
+    <div><h2>Div 3</h2></div>
+    </div>
+    <p><span style="color:rgba(168, 6, 6, 0.829); font-weight: bold; text-transform: uppercase;"> Hello</span></p>
 
 </body>
-
 </html>
