--- a/index.html
+++ b/index.html
@@ -1,60 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GoIteens Frontend</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device=width, initlal-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="le=edge">
+<title>Home work</title>
 </head>
 <body>
-   
-    <header>Это шапка
-         <nav>Это навигация</nav>
-        </header>
-   
-    <main>
-     <h1>H1</h1>
-    <p>Параграв </p>
-    <a href="https://github.com/AlexsanderMr/MrDemon228/settings">Ссылка</a>
-    <img src="https://avatars0.githubusercontent.com/u/56883568?s=400&u=961e7851536cbaa4bc07db0714d66a178b83a404&v=4" alt="фото">
-     <img src="./images/men.jpg" width="400px" alt="">
-     <img src="../img/wolk.jpg" width="400px" alt="">
-    <h2>Мои любимые предметы в школе</h2>
+<main>
     <ul>
-        <li>Информатика</li>
-        <li>Физра</li>
-        <li>История Украины</li>
-        <li>Всемирная История</li>
-   </ul>
-        <h2>4 вещи которые я люблю</h2>
-        <ol>
-            <li>Гулть</li>
-            <li>Играть в видео игры</li>
-            <li>Говорить с друзьями</li>
-            <li>Играть в баскетбол</li>
-        </ol>
-    <button>Стоп</button>   
-    <button>Продолжить</button>   
-    <button>Пуск</button>
-    <article>
-    <h1>Это заголовок статьи</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Jordan_by_Lipofsky_16577.jpg/274px-Jordan_by_Lipofsky_16577.jpg" alt="lol">
-    <section>
-          <p>BAN</p>
-    </section>
-    <section>
-          <p>BAN</p> 
-    </section>
-    <a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B0%D1%81%D0%BA%D0%B5%D1%82%D0%B1%D0%BE%D0%BB">Ссылка на ресурс</a>
-    
-    </article>
-    </main>
-    <footer>Это подвал</footer>
-    <div><h2>Div 1</h2>
-    <div><h2>Div 2</h2></div>
-    <div><h2>Div 3</h2></div>
-    </div>
-    <p><span style="color:rgba(168, 6, 6, 0.829); font-weight: bold; text-transform: uppercase;"> Hello</span></p>
+        <li><a style="color: brown;" href="https://ru.wikipedia.org/wiki/Oxxxymiron">Вики</a></li>
+        <li><a style="color: brown;" href="https://www.youtube.com/user/oxxxymironofficial">Ютуб</a></li>
+        <li><a style="color: brown;" href="https://vk.com/oxxxymiron">Вк</a></li>
+    </ul>
+    <img src="./images/sss.png" alt="">
+    <p>Биография</p>
+    <h2>Больше о рэпере Oxxxymiron</h2> 
+    <p> Мирон Янович Фёдоров родился 31 января 1985 года в Ленинграде в еврейской семье. Его отец — Ян Валерьевич Фёдоров, физик-теоретик, в 1994 году защитил в Петербургском институте ядерной физики имени Б. П. Константинова докторскую диссертацию на тему «Статистические свойства собственных функций случайных одночастичных гамильтонианов». Мать — библиотекарь. Учился в санкт-петербургской школе № 185. Когда Мирону было 9 лет, его семья переехала в город Эссен (Северный Рейн-Вестфалия, Германия), и Мирон поступил в гимназию имени Марии Вехтлер (Maria-Wächtler-Gymnasiumrude). По его словам, у него были напряжённые отношения с немецкими одноклассниками; эта тема позже нашла отражение в его ранней песне «Последний звонок». Первые попытки читать рэп Мирон предпринял в возрасте 13 лет под псевдонимом Миф (сокращение от Мирон Фёдоров).</p>
+    <p>После одной из поездок на родину в 14 лет уверенность Мирона в том, что он родоначальник рэпа на русском языке, пропала.</p>
+    <p>Когда Мирону было 15 лет, его семья переселилась в город Слау (Беркшир, Великобритания), и здесь, больше не имея проблем с одноклассниками, он усиленно взялся за учёбу. Вскоре английская учительница истории — выпускница Оксфордского университета — предложила ему попробовать поступить в Оксфорд после окончания школы. В 2004 году, подав документы и пройдя собеседование, Мирон поступил в университет на факультет английского языка и литературы.</p>
+    <p>В 2006 году получил диагноз «маниакально-депрессивный психоз» и был исключён по этой причине из вуза, но поступил повторно. В июне 2008 года получил диплом Оксфорда по специальности «средневековая английская литература».</p>
+    <p>После учёбы в Оксфорде Мирон переехал жить в Ист-Энд и начал поиски работы. Из-за «чрезмерной квалификации» он не смог найти работу по профессии. Как утверждает рэпер, он «работал кассиром, переводчиком, грузчиком, гидом, ларёчником, репетитором, конферансье, офисным планктоном и консультантом с копытом». Новый круг общения, состоявший из русскоязычных эмигрантов, подтолкнул Мирона вернуться к хип-хопу. Он стал заниматься музыкой под псевдонимом «Oxxxymiron», появившимся как сочетание имени с литературным термином «оксюморон» (англ. oxymoron) и утроенной —X", отсылающей к большому количеству нецензурной лексики в его песнях.</p>
+    <p>В 2015 году был выпущен сериал Лондонград, созданный во главе со сценаристом Михаилом Идовым на основе приключений Мирона в Лондоне.</p>
+    <p>Летом 2019 года поручился перед Мосгорсудом за 20-летнего активиста и студента ВШЭ Егора Жукова, который был арестован после несанкционированной акции 27 июля в Москве.</p>
+    <img src="./images/Oxxxy.jpg"alt="" >
 
+    <h2>Слова рэпера</h2>
+    <p><q>	У нас была группа, название которой я забыл, состояли в ней Миф и Сага. Сага так и не написал ни одной строчки и впоследствии сторчался. А я придумал русский рэп. То есть натурально был уверен, что я первый человек, читающий рэп по-русски (интернета у меня не было, а русскоязычных эмигрантов, которые могли бы поколебать мою уверенность, в Германии тогда ещё было достаточно мало).</q></p>
+    <p><q>	Я разговаривал на смеси так называемого «королевского» и книжного английского с немецким акцентом. Я слушал американский рэп, поэтому использовал много сленговых выражений. Я говорил такие слова, как «innit» во время моего собеседования в Оксфорде — думаю, что это одна из причин, по которой они приняли меня.</q></p>
+    <p><q>Я как-то говорил, что мы приехали сделать то, что не удалось Гитлеру и Наполеону. Что ж, история повторилась. Оказалось, что всё это время мы преследовали разные цели.</q></p>
+    <p><q>На данный момент я могу сказать, что мне стыдно за русский рэп. Сейчас стало очень много непонятных рэперов — они рифмуют хорошо, у них техника есть, но рэпа в них нет. Они не представители хип-хоп-культуры, они мейнстримщики, которые делают на этом бабки. Для них это бизнес и не более того. Они никогда не были в этой культуре, не варились в этом, российском. Какие-то там приезжие, блин, рэперы из Европы, которые раньше русский рэп унижали, а теперь они рэп читают на русском, типа Oxxxymiron. И люди их слушают. Я видел их слушателей, не дай бог, чтобы у меня такие были</q></p>
+
+
+    <img src="./images/Vagabund.png"alt="">
+    <h2>Творческая деятельность Оксимирона</h2>
+    <h3><p>МC Mif/Миф (2001)</p></h3>
+    <p>В 2001 Мирон появился на Hip-Hop.Ru и познакомился со многими рэперами, в сентябре выпустил свой первый трек «Демо-фристайл в стиле бардкор» (на данный момент утерян). Затем чуть позже он записал трек с исполнителем VeTaL из группы iSQUAD под названием «Витязи словоблудия». Затем он записал ещё несколько треков под названием «Лучшие МС» и КВРП (Каменный век русской поэзии). В этом же году участвовал в 1-м независимом баттле Hip-Hop.ru, где дошёл до 2 раунда, однако дальше не прошёл, так как не сдал трек на 2 раунд. В конце года вышел последний трек «Al Ogon». Мирон сделал перерыв на 7 лет.</p>
+    <h3><p>Optik Russia (2008—2010)</p></h3>
+    <h3><p>«Вечный жид», Vagabund (2011)</p></h3>
+    <a style="color: blue;" href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D1%87%D0%BD%D1%8B%D0%B9_%D0%B6%D0%B8%D0%B4_(%D0%B0%D0%BB%D1%8C%D0%B1%D0%BE%D0%BC)">Ссылка на альбом Вечный жид (вики)</a>
+    <h3><p>miXXXtape (2012—2014)</p></h3>
+    <h3><p>«Горгород» (2015 — 2016)</p></h3>
+    <a style="color: blue;" href="https://ru.wikipedia.org/wiki/%D0%93%D0%BE%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4">Ссылка на альбом Горгород (вики)</a>
+    <p><img src="./images/Cover.jpg"alt=""></p>
+    <h2>Скандалы и инциденты </h2>
+    <h3>Конфликт с группой «Каста»</h3>
+    <p>Во время тура «Октябрьские события» 2010 года появился слоган «На хуй „Касту“!», который позже будет олицетворять Vagabund. Основная версия появления данного лозунга следующая: во время выступления Шокка и Окси в одном из клубов Украины в соседнем клубе города предстояло выступление группы «Каста». Украинский монополист-организатор русских рэп-концертов «Нота» пытался помешать выступлению Окси и Шокка из-за страха того, что последние уведут часть аудитории с концертов «Касты». Как раз после этого Schokk и Oxxxymiron на всех своих совместных концертах и даже в треках скандировали вышеизложенный слоган. Это быстро подхватили и их фанаты. 21 июля 2012 года, уже после ухода из Vagabund, Оксимирон принял участие в музыкальном фестивале «Пикник „Афиши“». Одновременно с ним на «Пикнике» участвовал рэпер Влади из группы «Каста». Как рассказывает участник «Касты» Шым, Мирон извинился перед группой за высказывания в их сторону и пожал всем руки.</p>
+    <h3>Конфликт с Ромой Жиганом</h3>
+    <p>20 октября 2011 года, воспользовавшись случаем пребывания Vagabund в Москве во время тура по странам СНГ, в их съёмную квартиру ворвался рэпер Роман Чумаков, более известный как Рома Жиган, в сопровождении десяти человек. Цель визита — выяснение причин неоднократных выпадов Schokk’а в сторону Жигана в треках. Роман, угрожая оружием (по словам Хинтера), заставил оппонента просить прощения на коленях, при этом несколько раз ударил его по лицу. Вскоре после инцидента Шокк в одиночку покинул страну и сделал несколько видеообращений, на что Мирон ответил роликом, в котором объяснил свою точку зрения на произошедшее и объявил о своём намерении покинуть Vagabund и разорвать все связи с Schokk’ом.</p>
+    <p>После произошедшего Мирон остался в хороших отношениях с Ромой Жиганом и даже снялся в его фильме. После огласки это событие заняло первое место под слоганом «Нападение стаи лещей на Вагабунд» на портале Hip-hop.ru в рейтинге «Событие года — 2011».</p>
+    <h3>Rap.ru</h3>
+    <p>20 октября 2011 года, в разгар тура Vagabund по СНГ, Schokk и Oxxxymiron были приглашены на передачу What’s Up, выходившую на телеканале Rap.ru. Разговора как такового не состоялось, а отношения между Rap.ru и участниками Vagabund остались натянутыми</p>
+    <p>В марте 2012 года Oxxxymiron был приглашён на музыкальную церемонию Stadium RUMA (Russian Urban Music Awards), организованную порталом Rap.ru, с которым Мирон до этого имел напряжённые отношения. Во время выступления на сцену вышел двойник в маске, в то время как сам исполнитель остался за кулисами. Пока двойник жестикулировал под фонограмму на сцене, Мирон написал в своём твиттере: «Сижу, перечитываю „Двойника“ Достоевского…»</p>
+<button>Загрузить больше</button>
+</main>
 </body>
 </html>
